[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adnap"
description = "Reverse engineer the Panda dynamics model."
version = "0.1.0"
requires-python = ">=3.7"
authors = [
    { name = "Jean Elsner", email = "jean.elsner@tum.de" },
]
dependencies = [
  'panda-model',
  'scipy',
  'numpy',
  'sympy',
  'spatialmath-python',
  'roboticstoolbox-python',
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python", "robotics", "panda", "libfranka", "dynamics", "franka", "emika", "jacobian", "model", "control", "simulation", "robot-manipulator"]

classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]

test = [
    "pylint",
    "pylint-exit",
    "pytest",
    "pytest-cov",
    "anybadge",
]

[project.urls]
homepage = "https://github.com/JeanElsner/adnap"
documentation = "https://adnap.readthedocs.io"
repository = "https://github.com/JeanElsner/adnap"

[project.scripts]
adnap-optimize = "adnap.optimize:run"
adnap-evaluate = "adnap.evaluate:run"
